[package]
name = "osi-src"
version = "0.1.0+0.108.7"
edition = "2021"
build = "build.rs"
links = "Osi"
license = "Apache-2.0"
description = "The low-level bindings to the COIN-OR Osi library."
repository = "https://github.com/Maroon502/osi-src.git"
keywords = ["coin-or", "Osi", "Osi-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Osi/**/*",
    "!Osi/Osi/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = []

osicpx = []
osiglpk = []
osigrb = []
osimsk = []
osispx = []
osixpr = []


[dependencies]
coinutils-src = {git = "https://github.com/Maroon502/coinutils-src.git"}

[build-dependencies]
cc = "1.0"
coin-build-tools = { git = "https://github.com/Maroon502/coin-build-tools.git" }
