[package]
name = "osi-src"
version = "0.2.5+0.108.8"
edition = "2021"
build = "build.rs"
links = "Osi"
license = "Apache-2.0"
description = "Redistribution of Coin-OR Osi as a crate"
documentation = "https://docs.rs/osi-src/"
repository = "https://github.com/Maroon502/osi-src.git"
keywords = ["coin-or", "Osi", "Osi-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Osi/**/*",
    "!Osi/Osi/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = []

osicpx = []
osiglpk = []
osigrb = []
osimsk = []
osispx = []
osixpr = []


[dependencies]
coinutils-src = "0.2"

[build-dependencies]
cc = "1.0"
coin-build-tools = "0.2"
